fixed line spacing

--- a/etchSketch/styles.css
+++ b/etchSketch/styles.css
@@ -1,17 +1,29 @@
 .box {
     width: 20px;
     height: 20px;
-    border: 0.5px solid rgb(235, 11, 11);
-    margin-left: 1px;
+    border: 0.1px solid rgb(235, 11, 11);
+    
     display: inline-block;
 }
 
 .container {
     display: grid;
+    width: 50%;
+    font-size: 0;
+
+    margin: 0 auto;
+    border: 1px solid black;
+    
+    
 }
 
 .row {
     display: inline-block;
+    margin: 0px;
+    padding: 0px;
+    border-spacing: 0;
+    font-size: 1rem;
+    height: 20px;
 }
 
 .changed {
